--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<%# Our "base" layout should be a valid HTML document. %>
+<%# Our "base" layout should be a valid HTMLL document. %>
 <!DOCTYPE html>
 <html>
   <head>
